cargo-features = ["edition2024"]

[package]
name = "token_swap"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-program = "2.2.0"  # Оновлена версія на момент запиту
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }  # Оновлена версія
spl-associated-token-account = "6.0.0"  # Оновлена версія
thiserror = "2.0.11"  # Найновіша версія
borsh = "1.5.5"  # Оновлена версія
borsh-derive = "1.5.5"  # Оновлена версія
